<resources>
    <string name="app_name">WanAndroid</string>
    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="blog">公众号</string>
    <string name="question">每日一问</string>
    <string name="me">我</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="is_loading">正在加载...</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <string name="link">复制链接</string>
    <string name="browser">浏览器打开</string>
    <string name="more">更多</string>
    <string name="cancel">取消</string>
    <string name="popularSearch">热门搜索</string>
    <string name="historySearch">历史搜索</string>
    <string name="clearAll">清除</string>
    <string name="nothing">什么都没有 w(ﾟДﾟ)w</string>
    <string name="top">置顶</string>
    <string name="readHistory">阅读历史</string>
    <string name="clearCache">清除缓存</string>
    <string name="aboutAuthor">关于作者</string>
    <string name="systemSetting">系统设置</string>
    <string name="enterUserName">请输入用户名</string>
    <string name="enterPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="loginRegister">登录</string>

</resources>