<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/share_dialog"
    android:background="@color/containerBackground"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="@color/white"
     android:paddingHorizontal="8dp"
     android:paddingTop="8dp"
     >
     <ImageButton
         android:id="@+id/qqImageButton"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_weight="1"
         android:background="@color/white"
         android:src="@drawable/ic_qq"
         />
     <ImageButton
         android:id="@+id/wxImageButton"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_weight="1"
         android:background="@color/white"
         android:src="@drawable/ic_weixin"
         tools:ignore="MissingConstraints" />

     <ImageButton
         android:id="@+id/linkImageButton"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="30dp"
         android:background="@color/white"
         android:src="@drawable/ic_link"
         tools:ignore="MissingConstraints"
         />

     <ImageButton
         android:id="@+id/browserImageButton"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_weight="1"
         android:background="@color/white"
         android:src="@drawable/ic_browser"
         tools:ignore="MissingConstraints"
         />

     <ImageButton
         android:id="@+id/moreImageButton"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_weight="1"
         android:background="@color/white"
         android:src="@drawable/ic_more"
         tools:ignore="MissingConstraints" />

 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
     android:background="@color/white"
     >
     <TextView
         android:id="@+id/qqTxt"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="10sp"
         android:text="@string/qq"
         />
     <TextView
         android:id="@+id/wxTxt"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="10sp"
         android:text="@string/weixin"
         />
     <TextView
         android:id="@+id/linkTxt"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="10sp"
         android:text="@string/link"
         />
     <TextView
         android:id="@+id/browserTxt"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="10sp"
         android:text="@string/browser"
         />
     <TextView
         android:id="@+id/moreTxt"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="10sp"
         android:text="@string/more"
         />
 </LinearLayout>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textStyle="bold"
        />
</LinearLayout>